--- a/nim.cfg
+++ b/nim.cfg
@@ -4,3 +4,21 @@
 
 # importする時、src内のモジュールも検索するようにパスを追加追加
 path="src"
+
+# --cpu:arm64 --os:macosx
+# arm64.macosx.gcc.path = "/usr/bin/"
+# arm64.macosx.gcc.exe = "o64-clang"
+# arm64.macosx.gcc.linkerexe = "o64-clang"
+
+# --cpu:amd64 --os:windows
+amd64.macosx.gcc.path = "/usr/bin/"
+amd64.macosx.gcc.exe = "x86_64-w64-mingw32-gcc"
+amd64.macosx.gcc.linkerexe ="x86_64-w64-mingw32-gcc"
+amd64.windows.gcc.options.linker = "-ldl"
+
+# --cpu:amd64 --os:linux
+arm64.linux.gcc.path = "/usr/bin/"
+arm64.linux.gcc.exe = "gcc"
+arm64.linux.gcc.linkerexe = "gcc"
+
+
